readable: fix sizing on select element

--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -4303,6 +4303,11 @@ textarea,
 select {
   color: #090000;
 }
+select,
+input[type="file"] {
+  height: auto;
+  line-height: normal;
+}
 .form-actions {
   background-color: transparent;
   border-top: 1px solid #D4D4D4;
