--- a/readable/bootswatch.less
+++ b/readable/bootswatch.less
@@ -341,6 +341,11 @@ input, textarea, select {
 	color: @textColor;
 }
 
+select, input[type="file"] {
+	height: auto;
+	line-height: normal;
+}
+
 .form-actions {
 	background-color: transparent;
 	border-top: 1px solid #D4D4D4;
